--- a/index.html
+++ b/index.html
@@ -375,7 +375,10 @@ h3 {
 
 		<section class="inner">
 
-			<img src="genserver1.png" alt="step1" width="80%">
+			<img src="genserver1.png" alt="genserver1" width="80%">
+			<h2>GenServer花火大会2020とは？</h2>
+			
+			<h3>GenServerで花火大会をします。<br>はじめてするのでトラブルか何かあると思いますが、<br>運営の指示に協力してもらえたらなぁと思います。<br>ぜひ参加いだたけたら嬉しいです。</h3>
 			
 		</section>
 
