--- a/index.html
+++ b/index.html
@@ -378,7 +378,11 @@ h3 {
 			<img src="genserver1.png" alt="genserver1" width="80%">
 			<h2>GenServer花火大会2020とは？</h2>
 			
-			<h3>GenServerで花火大会をします。<br>はじめてするのでトラブルか何かあると思いますが、<br>運営の指示に協力してもらえたらなぁと思います。<br>ぜひ参加いだたけたら嬉しいです。</h3>
+			<p>GenServerで花火大会をします。<br>はじめてするのでトラブルか何かあると思いますが、<br>運営の指示に協力してもらえたらなぁと思います。<br>ぜひ参加いだたけたら嬉しいです。</p>
+			<br>
+			<br>
+			<h2>どうやって参加すればいい？</h2>
+			<p></p>
 			
 		</section>
 
