--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ h3 {
 			<br>
 			<br>
 			<h2>どうやって参加すればいい？</h2>
-			<p></p>
+			<p>詳しい事は<a href="https://gen3987.github.io/GenServer-how-to-join-jpn">サーバーへの接続方法</a>をご覧ください。</p>
 			
 		</section>
 
