--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ h3 {
 			<p>GenServerで花火大会をします。<br>はじめてするのでトラブルか何かあると思いますが、<br>運営の指示に協力してもらえたらなぁと思います。<br>ぜひ参加いだたけたら嬉しいです。</p>
 			<br>
 			<br>
-			<h2>どうやって参加すればいい？</h2>
+			<h2>どうやって参加するの？</h2>
 			<p>詳しい事は<a href="https://gen3987.github.io/GenServer-how-to-join-jpn">サーバーへの接続方法</a>をご覧ください。</p>
 			
 		</section>
