--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@ h3 {
 			<br>
 			<h2>どうやって参加するの？</h2>
 			<p>詳しい事は<a href="https://gen3987.github.io/GenServer-how-to-join-jpn">サーバーへの接続方法</a>をご覧ください。</p>
-			
+			<br>
+			<br>
+			<h1>後々新しい情報を追加していくのでお楽しみに！</h1>
 		</section>
 
 	</main>
