--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@ h3 {
 			<p>詳しい事は<a href="https://gen3987.github.io/GenServer-how-to-join-jpn">サーバーへの接続方法</a>をご覧ください。</p>
 			<br>
 			<br>
+			<h1>-------New!!-------</h1>
+			<h2>8/23(日)<br>8/30(日)<br>に花火大会をすることが決定しました！</h2>
+			<img src="genserver2.png" alt="genserver2" width="80%">
+			<img src="genserver3.png" alt="genserver3" width="80%">
+			<img src="genserver4.png" alt="genserver4" width="80%">
 			<h1>後々新しい情報を追加していくのでお楽しみに！</h1>
 		</section>
 
