--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <html lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<a href="http://f.hatena.ne.jp/images/fotolife/d/doumoto/20090323/20090323172047.jpg"><img src="http://f.hatena.ne.jp/images/fotolife/d/doumoto/20090323/20090323172047.jpg" width="225" height="127"></a>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"> <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/696295387358822400/728532790005465088/2.png">
-<title>GenServer - Minecraft マルチプレイ | GenServerの公式Webサイトです。当サーバーには、RPG「Twilight Star」などがあります。Webページで詳細を確認できます。</title>
+<title>GenServer花火大会2020 | GenServer花火大会2020特設ページです。</title>
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"> <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/696295387358822400/728532790005465088/2.png">
+<meta name="description" content="GenServerオフィシャルサイト">
+<meta name="keywords" content="minecraft GenServer,minecraft,げんさーばー,ゲンサーバー,GEN,GEN3987,GENServer,GENSERVER">
+<meta property="og:title" content="GenServerFireworksFestival2020Site">
+<meta property="og:description" content="GenServer花火大会2020特設サイト">
+<meta property="og:url" content="https://gen3987.github.io/GenServer-FireworksFestival/">
 <!--<link href="https://fonts.googleapis.com/css?family=Roboto:300,900" rel="stylesheet">-->
 <link href="./index_files/css" rel="stylesheet" type="text/css">
 <link href="./index_files/perfect-scrollbar.min.css" rel="stylesheet" type="text/css">
