--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@ h3 {
 			<li class="sub-menu">
 				<a href="#" class="sub-menu-head">初めての方へ</a>
 				<ul class="sub-menu-nav">
+					<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d465_f8_010/5f2a1e25d4760/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" ><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table><!--ここまで-->
 					<li><a href="#">チュートリアル</a></li>
 					<li><a href="https://gen3987.github.io/GenServer-how-to-join-jpn/">サーバーへの接続方法</a></li>
 					<li><a href="#">サーバーの決まり(ルール)</a></li>
